# Adaptix-Temporal-Service

./: .codacy.yaml  .gitattributes  .gitignore  pyproject.toml
.codebuild/: pr-validation.yml  security-scan.yml
.github/: dependabot.yml
.github/workflows/: build-image.yml  codacy-coverage.yml  codeql.yml  dependabot-automerge.yml  pr-backup.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/temporal_app/: __init__.py  config.py  system_token_client.py  worker.py
backend/temporal_app/activities/: __init__.py  billing_activities.py  document_activities.py  notification_activities.py  onboarding_activities.py
backend/temporal_app/workflows/: __init__.py  billing.py  billing_workflows.py  document_workflows.py  documents.py  notification_workflows.py  notifications.py  onboarding.py  onboarding_workflows.py
backend/workers/: __init__.py  billing_worker.py  documents_worker.py  notifications_worker.py  onboarding_worker.py
scripts/: local-ci.sh
tests/: __init__.py  conftest.py  test_billing_activities.py  test_config.py  test_notification_activities.py  test_system_token_client.py  test_workflow_definitions.py  test_workflow_imports.py
