[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-temporal-worker"
version = "0.1.0"
description = "Adaptix Temporal workflow worker — billing, notifications, documents, onboarding"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.7.0,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["temporal_app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = false

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
]
ignore_missing_imports = true
